added NGPS artwork, astero jump artwork

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div class="item" id="_4"><h1 class="title">Android Sound Pattern Counter</h1>
 	<p  class="description">My 3rd Year University Team Project was an application capable of recognising sample sounds and counting the number of occurences in a live sound stream from the device's microphone </p>
 	<i class="introPadding">
-		<a href="http://github.com/iFlex/Counter++" class="linkNicon">
+		<a href="https://github.com/iFlex/Counter" class="linkNicon">
 			<img src="res/git.png" style="width:28px;height:28px"></img>
 		</a>
 	</i>
