--- a/index.html
+++ b/index.html
@@ -60,15 +60,16 @@
 		<h1>Milorad Liviu Felix</h1>
 		<p>Computing Science student at the University of Glasgow</p>
 		<br>
-		<p style="width:50%;font-size:18px;"><i>Engaged Computing Science student who believes that every piece of hardware and software should be beautiful and efficient by design</i></p>
+		<p style="width:50%;font-size:18px;"><i>Engaged Computing Science Student who believes that every piece of hardware and software should be beautiful and efficient by design</i></p>
 		<br>
 		<a href="http://github.com/iFlex" class="linkNicon">
 			<img src="res/git.png" style="width:48px;height:48px"></img>
-			 My GitHub account
+			 GitHub
 		</a>
+		|
 		<a href="./res/MiloradLiviuFelixCv.pdf" class="linkNicon">
 			<img src="res/briefcase.png" style="width:48px;height:48px"></img>
-			 My CV
+			 CV
 		</a>
 	</div>
 </div>
@@ -76,22 +77,22 @@
 <div id="owl-demo" class="owl-carousel owl-theme">
   <div class="item" id="_1"><h1>Summer Intern at JP Morgan</h1></div>
   <div class="item" id="_2"><h1 class="title">NGPS</h1>
-	<p  class="description">A pure javascript presentation platform that relies on spatial mapping to convey ideas.</p>
+	<p  class="description">A pure JavaScript presentation platform that relies on spatial mapping to convey ideas.</p>
 	<br><br>
 	<i  class="introPadding">
 		<a href="http://github.com/iFlex/ngps" class="linkNicon">
-			<img src="res/git.png" style="width:28px;height:28px"></img>
+			<img src="res/git.png" style="width:28px;height:28px"> GitHub</img>
 		</a>
 		<a href="./subsites/NGPS/index.html" class="linkNicon">
 			<img src="res/demo.png" style="width:32px;height:32px"> demo</img>
 		</a>
 	</i></div>
-  <div class="item" id="_3"><img src="res/jacobshk.png" style="height:64px;width:auto"></img><h1 class="title">Best AWS Hack award at JacobsHack Hackathon</h1></div>
+  <div class="item" id="_3"><img src="res/jacobshk.png" style="height:64px;width:auto"></img><h1 class="title">Best AWS Hack Award at JacobsHack Hackathon</h1></div>
   <div class="item" id="_4"><h1 class="title">Android Sound Pattern Counter</h1>
-	<p  class="description">My 3rd Year University Team Project was an application capable of recognising sample sounds and counting the number of occurences in a live sound stream from the device's microphone </p>
+	<p  class="description">3rd Year University Team Project was an application capable of recognising sample sounds and counting the number of occurences in a live sound stream from the device's microphone </p>
 	<i class="introPadding">
 		<a href="https://github.com/iFlex/Counter" class="linkNicon">
-			<img src="res/git.png" style="width:28px;height:28px"></img>
+			<img src="res/git.png" style="width:28px;height:28px"> GitHub</img>
 		</a>
 	</i>
 	</div>
@@ -103,11 +104,11 @@
 	<br>
 	<i class="introPadding">
 		<a href="http://github.com/iFlex/CoClip" class="linkNicon">
-			<img src="res/git.png" style="width:28px;height:28px"> see on git</img>
+			<img src="res/git.png" style="width:28px;height:28px"> GitHub</img>
 		</a>
 	</i></div>
   <div class="item" id="lctb"><h1 class="title">Logic Circuit Testing Board</h1>
-	<p  class="description">A logic gates simulator made in Action Script for web embedding</p>
+	<p  class="description">A logic gate simulator made in Action Script for web embedding</p>
 	<br>
 	<i class="introPadding">
 		<a href="./subsites/logic_circuit_testing_board/LogicCircuitTestBoard.html" class="linkNicon">
@@ -125,7 +126,7 @@
 
 	<div class="item" id="_10">
 		<h1>Self Balancing Robotic Platform</h1>
-		<p> A remote controlled robotic frame that ballances itself on 2</p>
+		<p> A remote controlled robotic frame that balances itself on 2 wheels</p>
 	</div>
 	<div class="item" id="_11">
 		<h1>Mini Sumo Robot</h1>
@@ -133,7 +134,7 @@
 	</div>
 	<div class="item" id="_12">
 		<h1>Puck Collect Bot</h1>
-		<p> An autonomous puc collecting robot</p>
+		<p> An autonomous puck collecting robot</p>
 	</div>
   <div class="item" id="_13"><h1 class="title">NASA</h1>
 		<a href="http://www.aeronautics.nasa.gov/competition_winners.htm" class="linkNicon" style="font-size:20px"><i>1st place, Fundamental Aeronautics Program Student Contest, international teams section - click for competition page</i></a>
@@ -155,7 +156,7 @@
 <p style="text-align:left">Grand Winner Medal, 9th International Informatrix Projects Competition, Bucharest, Romania. Project: Autonomous Mini-Sumo Robot</p>
 <p style="text-align:left">1st Place at Senior Line Follower Contest, International Robotics Trophy Robotor, Orsova, Romania</p>
 <p style="text-align:left">3rd Prize at 7th International ICT Olympiad, Ankara, Turkey. Project: Collection of Flash Educational Games</p>
-<p style="text-align:left">Product of The Year award at Junior Achievement, National Phase Buchares, Romania. Project: Clock Works - vintage clocks made out of vinyl disks with heat induced deformations</p>
+<p style="text-align:left">Product of The Year Award at Junior Achievement, National Phase Buchares, Romania. Project: Clock Works - vintage clocks made out of vinyl disks with heat induced deformations</p>
 -->
 </body>
 </html>
