--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
 </script>
 <head>
 <body>
-<div id="y0" class="item text-center introPadding" style="background-image:url('./res/bkg.jpg');background-size:cover">
+<div id="y0" class="item text-center introPadding" > <!--style="background-image:url('./res/banner.png');background-size:cover"> -->
 	<div class="intro">
 		<h1>Milorad Liviu Felix</h1>
 		<p>Computing Science student at the University of Glasgow</p>
 		<br>
 		<p style="width:50%;font-size:18px;"><i>Engaged Computing Science Student who believes that every piece of hardware and software should be beautiful and efficient by design</i></p>
 		<br>
+
 		<a href="http://github.com/iFlex" class="linkNicon">
 			<img src="res/git.png" style="width:48px;height:48px"></img>
 			 GitHub
@@ -70,6 +71,11 @@
 		<a href="./res/MiloradLiviuFelixCv.pdf" class="linkNicon">
 			<img src="res/briefcase.png" style="width:48px;height:48px"></img>
 			 CV
+		</a>
+		|
+		<a href="https://uk.linkedin.com/in/milorad-liviu-felix-0b273888" class="linkNicon">
+			<img src="res/lnkdin.png" style="width:36px;height:36px"></img>
+			 LinkedIn
 		</a>
 	</div>
 </div>
