--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </script>
 <head>
 <body>
-<div id="y0" class="item text-center introPadding" > <!--style="background-image:url('./res/banner.png');background-size:cover"> -->
+<div id="y0" class="item text-center introPadding" >
 	<div class="intro">
 		<h1>Milorad Liviu Felix</h1>
 		<p>Computing Science student at the University of Glasgow</p>
